--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .img1 {
-    background: url('image1.jpg') no-repeat center center/cover fixed;
+    background: url('image1.jpg') no-repeat  fixed;
     height: 100vh;
     opacity: .7;
     display: flex;
